# youtube-downloader-tool

./: .version  CMakeLists.txt  README.md
src/: downloader.cpp  downloader.h  main.cpp  utils.cpp  utils.h
tests/: test_downloader.cpp
youtube-downloader-tool/: requirements.txt
youtube-downloader-tool/src/: __init__.py  cli.py  downloader.py
youtube-downloader-tool/tests/: test_downloader.py
